Kubernetes/image-processing/Canary-deployment/image-processing-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-processing-deployment-stable
  labels:
    app: image-processing-service
    version: stable
  annotations:
    description: "Stable deployment for image processing service"
    contact: "team@example.com"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: image-processing-service
      version: stable
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: image-processing-service
        version: stable
      annotations:
        commit: "a1b2c3d4"
    spec:
      containers:
        - name: image-processing-container
          image: 153676591437.dkr.ecr.eu-west-2.amazonaws.com/image-processing:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
