Kubernetes/image-processing/Canary-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-processing-service
spec:
  selector:
    app: image-processing-service
  ports:
    - port: 8080
      targetPort: 8080
      name: http
---
