Kubernetes/image-processing/Canary-deployment/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: image-processing-destination-rule
spec:
  host: image-processing-service
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
---
