Kubernetes/image-processing/Canary-deployment/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: image-processing-virtual-service
spec:
  hosts:
    - "api.ashutosh.systems"
  gateways:
    - imageprocessing-gateway
  http:
    - match:
        - uri:
            prefix: /process-image
      route:
        - destination:
            host: image-processing-service
            subset: stable
          weight: 90
        - destination:
            host: image-processing-service
            subset: canary
          weight: 10
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - POST
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: auth-service
            port:
              number: 4000
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
    - match:
        - uri:
            prefix: /dashboard
      route:
        - destination:
            host: auth-service
            port:
              number: 4000
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - GET
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
    - match:
        - uri:
            prefix: /image-upload
      route:
        - destination:
            host: react-frontend-service
            port:
              number: 80
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - POST
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
---
